--- a/assets/style.css
+++ b/assets/style.css
@@ -1,19 +1,24 @@
 body {
-    background-color: darkgray;
+    background-color: #45515F;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 header {
     text-align: center;
+    padding: 15px;
+    margin: 10px;
 }
 
 header h1 {
-    font-size: 20px;
-    color: purple;
+    font-size: 40px;
+    color: #8DF88B;
+    text-shadow: 0 0 3px #fff;
+    
 }
 
 header p {
     color: white;
+    padding: 10px;
 }
 
 .box {
