--- a/assets/style.css
+++ b/assets/style.css
@@ -15,6 +15,11 @@ header h1 {
 header p {
     color: white;
 }
+.content{
+display: flex;
+flex-direction: row wrap;
+}
+
 
 .box {
     background-color: darkgray;
@@ -23,3 +28,13 @@ header p {
     padding: 50px;
     margin: 20px;
   }
+.inside_text{
+    flex: ;
+position: relative;
+background-color: aliceblue;
+width: 260px;
+height: 150px;
+top: 30px;
+right: 30px;
+border-radius: 10px;
+}
